# mine-chan

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  compose.yaml  main.py  pyproject.toml  requirements.txt
backend/app/: core.py  main.py  schemas.py  test_core.py
backend/app/api/: controller.py
backend/app/api/db/: db.py  model.py  redis.py  schemas.py  test_model.py
backend/app/api/game/: controller.py  model.py  schema.py  service.py  test_service.py
mine-chan-front/: .firebaserc  .gitignore  README.md  openapitools.json  package-lock.json  package.json
mine-chan-front/src/app/: layout.tsx  page.tsx
mine-chan-front/src/app/game/: actions.ts  page.tsx
mine-chan-front/src/lib/: api.ts
mine-chan-front/src/types/.openapi-generator/: FILES
mine-chan-front/src/types/apis/: DefaultApi.ts  GameApi.ts  index.ts
mine-chan-front/src/types/models/: CreateGame.ts  DigSquare.ts  FieldResult.ts  FlagSquare.ts  GameStateEnum.ts  index.ts
mine-chan-front/src/types/typescript-axios/: api.ts
